# PowerPoint_MCP

./: .gitignore  README.md
mcp-server/: README.md  pyproject.toml
powerpoint-generator/: LICENSE  SKILL.md  company_template_rules.md  content_guidelines.md  slide_patterns.md  template_rules.md
powerpoint-generator/assets/: README.md  company-template.pptx
powerpoint-generator/scripts/: check_text_layout.py
